updated froala z-index to prevent it from covering elements of the page such as datepicker

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -109,9 +109,6 @@
         background-color: $color-green-2
 
 
-  a
-    font-weight: 300
-
   h3
     margin: 0
     padding: 0
@@ -158,6 +155,7 @@
 .event-name
   font-size: 1rem
   text-align: center
+  font-weight: 400
 
 .event-image
   float: left
